<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovieFeel</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="tv_mpaa_rating_title">MPAA Rating:</string>
    <string name="tv_critics_consensus_title">Critics consensus:</string>
    <string name="tv_critics_rating_title">Critics rating:</string>
    <string name="tv_critics_score_title">Critics score:</string>
    <string name="tv_audience_rating_title">Audience rating:</string>
    <string name="tv_audience_score_title">Audience score:</string>
    <string name="tv_runtime_title">Runtime:</string>
    <string name="tv_synopsis_title">Synopsis:</string>
    <string name="tv_introduce_ip">IP Address:</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="menu_ip_address">Ip</string>
    <string name="btn_search">Search</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="loading">Loading...</string>
    <string name="menu_refresh_list">Refresh</string>
    <string name="not_available">Not available</string>
    <string name="btn_do_opinion_mining_text">Get statistics</string>
    <string name="cannot_contact_server">Cannot contact server!</string>
	<string name="enable_data_connection">Please enable data connection.</string>
	<string name="anger_title">Anger rating:</string>
	<string name="disgust_title">Disgust rating:</string>
	<string name="fear_title">Fear rating:</string>
	<string name="joy_title">Joy rating:</string>
	<string name="processed_title">Processed rating:</string>
	<string name="surprise_title">Surprise rating:</string>
</resources>