<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/etIpAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="56dp"
        android:inputType="number"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnCancelIpAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/etIpAddress"
        android:layout_below="@+id/etIpAddress"
        android:text="@string/btn_cancel" />

    <Button
        android:id="@+id/btnOkIpAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etIpAddress"
        android:layout_below="@+id/etIpAddress"
        android:text="@string/btn_ok" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_introduce_ip" />

</RelativeLayout>