<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!-- <Button -->
        <!-- android:id="@+id/btnSetDummyText" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_alignLeft="@+id/tvMpaaRating" -->
        <!-- android:layout_alignParentBottom="true" -->
        <!-- android:layout_marginBottom="68dp" -->
        <!-- android:text="Button" /> -->

        <TextView
            android:id="@+id/tvMpaaTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="14dp"
            android:text="@string/tv_mpaa_rating_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvMpaaRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvMpaaTitle"
            android:layout_marginLeft="5dp"
             />

        <TextView
            android:id="@+id/tvCriticsConsensusTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvMpaaRating"
            android:text="@string/tv_critics_consensus_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RelativeLayout
            android:id="@+id/rlCriticsConsensus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvCriticsConsensusTitle"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/tvCriticsConsensus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                 />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvCriticsRatingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/rlCriticsConsensus"
            android:text="@string/tv_critics_rating_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvCriticsRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvCriticsRatingTitle"
            />

        <TextView
            android:id="@+id/tvCriticsScoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvCriticsRating"
            android:text="@string/tv_critics_score_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvCriticsScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvCriticsScoreTitle"
             />

        <TextView
            android:id="@+id/tvAudienceRatingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvCriticsScore"
            android:text="@string/tv_audience_rating_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvAudienceRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvAudienceRatingTitle"
             />

        <TextView
            android:id="@+id/tvAudienceScoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvAudienceRating"
            android:text="@string/tv_audience_score_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvAudienceScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvAudienceScoreTitle"
            />

        <TextView
            android:id="@+id/tvRuntimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvAudienceScore"
            android:text="@string/tv_runtime_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvRuntimeTitle"
            />

        <TextView
            android:id="@+id/tvSynopsisTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvRuntime"
            android:text="@string/tv_synopsis_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RelativeLayout
            android:id="@+id/rlSynopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvSynopsisTitle"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/tvSynopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                 />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/rlThumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/rlSynopsis"
            android:layout_marginTop="5dp" >

            <ImageView 				android:id="@+id/ivThumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent" 
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"/>
        </RelativeLayout>
        
    </RelativeLayout>

</ScrollView>